feat: add api for MDB monitoring
